# papi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USAGE.md  canister_ids.json  dev-tools.json  dfx.json  didc.hbs  didc.toml  package-lock.json  package.json  test.backend.sh
.config/: spellcheck.dic
.github/: CODEOWNERS  dependabot.yml
.github/actions/needs_success/: action.yaml
.github/workflows/: check.yml  integration.yml  pr.yml  publish.yml
scripts/: bind.cycles_depositor.sh  bind.cycles_ledger.sh  bind.cycles_wallet.sh  did.sh  fmt-frontend  fmt-json  lint  lint-git  lint-github  lint-rs  pic-install  setup  test-rs  test.integration.sh
src/api/: Cargo.toml
src/api/src/: caller.rs  cycles.rs  error.rs  lib.rs  vendor.rs
src/customer_backend/: Cargo.toml
src/customer_backend/src/: lib.rs
src/declarations/cycles_ledger/: Cargo.toml
src/declarations/cycles_ledger/src/: lib.rs
src/declarations/example_paid_service/: example_paid_service.did.d.ts  example_paid_service.did.js  index.d.ts  index.js
src/example/: Cargo.toml  README.md
src/example/app_backend/: Cargo.toml  example_app_backend.did
src/example/app_backend/src/: lib.rs
src/example/customer_backend/: Cargo.toml
src/example/paid_service/: Cargo.toml  example-paid-service.did
src/example/paid_service/src/: lib.rs  stable_memory.rs  state.rs
src/example/paid_service/tests/: attached_cycles.rs  icrc2.rs  mod.rs
src/example/paid_service/tests/it/: attached_cycles.rs  caller_pays_icrc2_cycles.rs  caller_pays_icrc2_tokens.rs  icrc2.rs  main.rs  patron_pays_icrc2_cycles.rs  patron_pays_icrc2_tokens.rs  upgrade.rs
src/example/paid_service/tests/it/util/: cycles_depositor.rs  cycles_ledger.rs  cycles_wallet.rs  mod.rs  pic_canister.rs  test_environment.rs
src/example/paid_service_api/: Cargo.toml
src/example/paid_service_api/src/: lib.rs
src/example/src/: lib.rs
src/example/tests/: attached_cycles.rs  attached_cycles_v2.rs  mod.rs  pic_tool.rs  pic_util.rs
src/example/tests/attached_cycles_v2/: pic_tool.rs
src/guard/: Cargo.toml
src/guard/src/guards/: any.rs  attached_cycles.rs  caller_pays_icrc2_cycles.rs  caller_pays_icrc2_tokens.rs  icrc2_cycles.rs  icrc2_from_caller.rs  icrc2_tokens.rs  mod.rs  patron_pays_icrc2_cycles.rs  patron_pays_icrc2_tokens.rs
src/guards/: attached_cycles.rs  mod.rs
src/papi/: Cargo.toml
src/papi/src/: lib.rs
src/wrapper/: Cargo.toml  ic_papi_wrapper.did
src/wrapper/src/: lib.rs  state.rs
src/wrapper/src/api/: call.rs
src/wrapper/src/domain/: errors.rs  mod.rs  types.rs
src/wrapper/src/payments/: guard_config.rs  mod.rs
src/wrapper/src/util/: cycles.rs
src/wrapper/tests/it/: bridge_tests.rs  main.rs
src/wrapper/tests/it/util/: mod.rs  pic_canister.rs  test_environment.rs
