[package]
name = "ic-papi-api"
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cycles-ledger-client = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
