[package]
name = "ic-papi-guard"
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
ic-cdk = "0.17.2"
ic-cycles-ledger-client = { workspace = true }
ic-papi-api = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
