[package]
name = "ic-papi"
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
