[package]
name = "ic-papi-wrapper"
version = "0.0.1"
edition = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
ic-cycles-ledger-client = { workspace = true }
pocket-ic = { workspace = true }
