[package]
name = "ic-cycles-ledger-client"
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false
version = { workspace = true }

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
