[package]
name = "example_app_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-papi-api = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }
