[package]
name = "example_app_backend"
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-papi-api = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }
