[package]
name = "example_customer_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-macros = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
ic-papi-api = { workspace = true }


[dev-dependencies]
pocket-ic = { workspace = true }
