[package]
name = "example_paid_service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-macros = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
example-paid-service-api = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }
cycles-ledger-client = { workspace = true }
