[package]
name = "example_paid_service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
example-paid-service-api = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
cycles-ledger-client = { workspace = true }
pocket-ic = { workspace = true }
