[package]
name = "example-paid-service"
license = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
example-paid-service-api = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-papi-api = { workspace = true }
ic-papi-guard = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
ic-cycles-ledger-client = { workspace = true }
pocket-ic = { workspace = true }
